FEAT [Added New Institution Unit Tests]